@@ -59,6 +59,7 @@
   [#23850] ATMega8 does not have MCUSR defined
   [#23871] clock_prescale_set() not available for ATmega32U4
   [#23959] Small typo in deprecated documentation
+  [#23969] eeprom_read_byte() throws interrupt EE_READY although EERIE is cleared, controller resets
 
 * Other changes:
 
